# registry-infrastructure

./: .env.codecatalyst  .envrc  .gitignore  API_CONSOLIDATION_PROGRESS.md  CLEANUP_QUICK_REFERENCE.md  CODECATALYST_CLEANUP_STRATEGY.md  DEPLOYMENT_TEST.md  DOCUMENTATION.md  DYNAMODB_DEPRECATION_FIX.md  EXECUTION_MODE_IMPLEMENTATION.md  INFRASTRUCTURE_FIX.md  JUSTFILE.md  LAMBDA_HANDLER_UPDATE.md  PERFORMANCE_OPTIMIZATION_SUMMARY.md  PULL_REQUEST_TEMPLATE.md  README.md  SCHEMA_DESIGN.md  TASK10_VALIDATION_REPORT.md  TASK4_IMPLEMENTATION_SUMMARY.md  TASK7_IMPLEMENTATION_SUMMARY.md  app.py  artifact-compatibility-test-report.txt  assessment_results.json  check_yaml.py  database_audit_report_20250827_082924.json  devbox.json  execution-context.json  execution-mode-env.sh  get_logs.py  justfile  main-branch-deployment-test-results.txt  main.py  package-lock.json  production_diagnosis_20250809_210901.json  pyproject.toml  requirements.txt  setup-aws-testing.md  simple-artifact-test.sh  standardized_schema_documentation_20250827_090441.json  test-deploy-stage.sh  (+6 more)
.codecatalyst/: README.md
.kiro/: codecatalyst-pipeline-knowledge.md
docs/: DEPLOYMENT_COORDINATION.md  PR_TEMPLATE.md  PR_VALIDATION_IMPLEMENTATION_SUMMARY.md  README.md
email_templates/: base_template.html  new_user_welcome_email.html  password_changed_email.html  password_reset_email.html  welcome_email.html
lambda/: api_handler.py  auth_handler.py  csrf_protection.py  email_service.py  enhanced_api_handler.py  enhanced_password_service_v2.py  main.py  password_management_service.py  requirements.txt  (+1 more)
(+137 files in other folders)
