[project]
name = "people-registry-infrastructure"
version = "0.1.0"
description = "People Registry Infrastructure"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aws-cdk-lib==2.194.0",
    "bcrypt>=4.3.0",
    "boto3>=1.34.0",
    "constructs>=10.0.0,<11.0.0",
    "pydantic>=2.7.0",
]
